style: style session view, change background and fix quiz answer reveal flickering

--- a/src/css/Session.module.css
+++ b/src/css/Session.module.css
@@ -6,6 +6,8 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  justify-content: center;
+  gap: 20%;
 }
 
 .playerAnswers li::marker {
@@ -18,16 +20,35 @@
 
 .playerAnswers {
   margin-left: 1.5rem;
-  min-width: 25rem
+  min-width: 25rem;
+  font-size: 4.5rem;
+  max-width: 80rem;
+  /* margin-right: 20%; */
 }
+
+.sessionTitle {
+  font-size: 4rem;
+}
+
+@media only screen and (max-width: 1000px) {
+  .playerAnswers {
+    font-size: 3.0rem;
+  }
+
+  .sessionTitle {
+    font-size: 3rem
+  }
+ }
 
 .hostAnswers {
   margin-right: 1.5rem;
+  font-size: 3rem;
+  /* margin-left: 40% */
 }
 
 .hostAnswers li {
   line-height: 100%;
-  margin-top: 0.06rem;
+  margin-top: 1rem;
 }
 
 .hostAnswers li::marker {
@@ -37,19 +58,20 @@
 .revealDiv {
   vertical-align: middle;
   text-align: center;
-  max-width: 30rem
+  max-width: 50rem
 }
 
 .revealButton {
   vertical-align: middle;
-  max-width: 18rem;
+  max-width: 100rem;
   width: 100%;
-  height: 47px;
+  height: auto;
+  padding: 1rem 1rem;
   margin: auto;
-  padding: 0rem;
+  /* padding: 0rem; */
   border-radius: 0.4rem;
-  border: none;
-  font-size: 15px;
+  border: solid transparent 1px;
+  font-size: 3rem;
   color: white;
   background-color: var(--dark-gray);
   &:hover {
@@ -59,9 +81,9 @@
 
 .checkedButton {
   vertical-align: middle;
-  border: solid 3px;
+  border: solid 1px;
   border-color: rgb(255, 0, 0);
-  box-shadow: 0px 0px 10px 0px red;
+  box-shadow: 0px 0px 2px 1px red;
 }
 
 .optionButtons button {
