--- a/src/index.css
+++ b/src/index.css
@@ -16,13 +16,16 @@
 
 body {
   background-image: url("./assets/background.jpg");
+  background-repeat: repeat;
+  background-attachment: fixed;
+  background-size: cover;
   color: white;
   height: 100%;
 }
 
 @media only screen and (min-width: 1001px) {
   html {
-    font-size: 16px;
+    font-size: 10px;
   }
   body {
     margin: 2rem 2rem;
